Modificada tela de login

--- a/src/app/components/listar/listar.component.html
+++ b/src/app/components/listar/listar.component.html
@@ -5,12 +5,12 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Lido</th>
-                <th>ID</th>
+                <th width="5%">Lido</th>
+                <th width="5%">ID</th>
                 <th>Título</th>
                 <th>Autor</th>
-                <th>Ano de Publicação</th>
-                <th>Ações</th>
+                <th width="15%">Ano de Publicação</th>
+                <th width="15%">Ações</th>
             </tr>
         </thead>
 
