--- a/src/app/components/listar/listar.component.scss
+++ b/src/app/components/listar/listar.component.scss
@@ -1,6 +1,5 @@
 .container h3 {
     color: rgb(37, 190, 241);
-
 }
 
 .table thead tr th {
@@ -10,10 +9,19 @@
 
 .table tbody tr td,
 th {
+
     background: rgb(157, 197, 240) !important;
     border: 1px solid white;
 }
 
+.table tr {
+    text-align: center;
+}
+
 .btn btn-primary form-control {
     color: orange
+}
+
+.modal-dialog {
+    background-color: aqua;
 }
