Verificadas rotas e teste do login

--- a/src/app/components/listar/listar.component.html
+++ b/src/app/components/listar/listar.component.html
@@ -29,9 +29,11 @@
             </tr>
         </tbody>
         <br>
-        <button class="btn btn-primary" (click)="redirecionar('/logs')">Logs</button>
+        <button class="btn btn-primary" (click)="redirecionar('logs')">Logs</button>
     </table>
 </div>
+
+<!-- <router-outlet></router-outlet> -->
 
 <div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="modal1Label" aria-hidden="true">
     <div class="modal-dialog">
