--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -27,3 +27,9 @@ input {
     margin-bottom: .5em;
 }
 
+.telinha-login {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
