Ajustada tela de login

--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -3,7 +3,11 @@
     text-align: center;
 }
 
-.container-fluid {
+.telinha-login {
+    height: 100vh;
+}
+
+.container {
     margin-top: 30px;
     padding: 1em;
     background-color: antiquewhite;
