--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="telinha-login">
-    <div class="container-fluid">
+    <div class="container">
         <h1>Login</h1>
     
         <div>
